--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
+<nav>
+    <ul>
+        <li></li>
+        <li></li>
+              
+
+    </ul>
+</nav>
+<main>
+    <section>
+        <article></article>
+    </section>
+</main>
+<footer>
+    <ul>
+        <a href=""></a>
+     </ul>   
+</footer>
+
+
     
 </body>
 </html>
