--- a/index.html
+++ b/index.html
@@ -8,22 +8,38 @@
     <link rel="stylesheet" href="css/css.css">
 </head>
 <body>
+    <header>
+    <h1></h1>
 <nav>
     <ul>
-        <li></li>
-        <li></li>
-              
+        <li><a href="inicio"></a>inicio</li>
+        <li><a href="contacto"></a>contacto</li>
+          <li><a href="empresa"></a>empresa</li>    
 
     </ul>
 </nav>
+</header>
 <main>
     <section>
-        <article></article>
+        <h2></h2>
+        <img src="" alt="">
+        <article>
+            <p></p>
+        </article>
+    </section>
+    <section>
+        <h3></h3>
+         <img src="" alt="">
+         <article>
+             <p></p>
+         </article>
     </section>
 </main>
 <footer>
     <ul>
-        <a href=""></a>
+        <li><a href="intagram">intagram</a></li>
+        <li><a href="facebook">facebook</a></li>
+        <li><a href="twiter">twiter</a></li>
      </ul>   
 </footer>
 
