--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header>
-    <h1></h1>
+    <h1>poniendo algo</h1>
 <nav>
     <ul>
-        <li><a href="inicio"></a>inicio</li>
-        <li><a href="contacto"></a>contacto</li>
-          <li><a href="empresa"></a>empresa</li>    
+        <li><a href="inicio.html"></a>inicio</li>
+        <li><a href="contacto.html"></a>contacto</li>
+        <li><a href="empresa.html"></a>empresa</li>    
 
     </ul>
 </nav>
